Issue: CLOUD-11  - Impvore visibility of language switch

--- a/themes/abasky/login/resources/css/login.css
+++ b/themes/abasky/login/resources/css/login.css
@@ -43,7 +43,7 @@
 }
 
 #kc-locale-dropdown a {
-    color: #fff;
+    color: #0099d3;
 }
 
 #kc-locale-dropdown a:hover {
